--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-22?
+<!DOCTYPE htm1>
+<html>
+ <head>
+  <meta charset="utf-8">
+<title>黃志嘉網頁</title>
+ </head>
+</body>
+    </h1>HELLO,電二</h1>
+</body>
+</html>
